# mobile-manipulator-motion-planning

./: .gitignore  README.md
.github/workflows/: ros_build.yml
butler_robot/: CMakeLists.txt  package.xml
butler_robot/config/: rviz_config.rviz
butler_robot/launch/: butler_robot_bringup.launch  butler_robot_gazebo.launch  butler_robot_rviz.launch
butler_robot/meshes/controlbox/: box.STL  fh_logo1.STL  fh_logo2.STL  fh_logo3.STL  fh_logo4.STL  fh_logo5.STL  fh_logo6.STL
butler_robot/urdf/: butler_robot.urdf.xacro  controlbox.urdf  robotiq_2f_85_gripper.urdf
tdf_gazebo/: CMakeLists.txt  package.xml
tdf_gazebo/config/: rviz_config.rviz  tdf_move.rviz
tdf_gazebo/launch/: tdf_butler_control.launch
tdf_gazebo/map/: technikumdigitalfactory_map.pgm  technikumdigitalfactory_map.yaml
tdf_gazebo/meshes/: aruco_black.STL  aruco_white.STL
tdf_gazebo/urdf/: aruco_tag.urdf  morobot_model.urdf
tdf_gazebo/world/: technikum_digital_factory.world  technikum_digital_factory2.world
tdf_gazebo/world/technikum_digital_factory/: model.config  model.sdf
tdf_simulation/: CMakeLists.txt  package.xml
tdf_simulation/launch/: spz_sim.launch
tdf_simulation/src/: camera_node.cpp  control_node.cpp
ur_butler_moveit/: .setup_assistant  CMakeLists.txt  package.xml
ur_butler_moveit/config/: butler_robot.srdf  fake_controllers.yaml  gazebo_butler_robot.urdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  rviz_config.rviz  simple_moveit_controllers.yaml  stomp_planning.yaml
ur_butler_moveit/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  start_moveit_sim.launch  stomp_planning_pipeline.launch.xml
